chore: fix luarocks push

--- a/.github/workflows/luarocks.yml
+++ b/.github/workflows/luarocks.yml
@@ -2,17 +2,17 @@ name: Push to Luarocks
 
 on:
   push:
-    tags: # Will upload to luarocks.org when a tag is pushed
+    tags:
       - "*"
   workflow_dispatch:
 
 jobs:
   luarocks-upload:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: LuaRocks
-        uses: nvim-neorocks/luarocks-tag-release@v5
+      - uses: actions/checkout@v4
+      - name: LuaRocks Upload
+        uses: nvim-neorocks/luarocks-tag-release@v7
         env:
           LUAROCKS_API_KEY: ${{ secrets.LUAROCKS_API_KEY }}
         with:
